<resources>
    <string name="app_name">WAY</string>
    <string name="app">WAY</string>
    <string name="email">Почта E-mail</string>
    <string name="password">Пароль</string>
    <string name="signin">ВОЙТИ</string>
    <string name="forgotpassword">Забыли пароль</string>
    <string name="googlesignin">Войти через Google</string>
    <string name="mailsignin">Войти через E-mail</string>
    <string name="phonesignin">Войти по номеру телефона</string>
    <string name="noreg">Не зарегестрированы?</string>
    <string name="reg">Создать аккаунт!</string>
    <string name="googlereg">Зарегистрироваться через Google</string>
    <string name="mailreg">Зарегистрироваться через E-mail</string>
    <string name="phonereg">Зарегистрироваться по номеру телефона</string>
    <string name="yesreg">Уже есть акаунт?</string>
    <string name="yessignin">Войти</string>
    <string name="fullname">Полное имя</string>
    <string name="regaccount">Зарегестрироваться</string>
    <string name="regemailaccount">Регистрация через E-mail</string>
    <string name="back">Назад</string>
    <string name="forgetpassword">Забыли пароль?</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_googlemapway">googlemapway</string>
    <string name="title_activity_trymap">trymap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_googlemap">Googlemap</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu_way">MenuWay</string>
    <string name="title_activity_m">M</string>
    <string name="all_phones">All phones</string>
    <string name="view_all">View All</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="hello">Это уникальное приложение, которое было создано для любителей путешествовать или хорошо отдыхать. Это первая версия, поэтому отзывы и критика приветствуются. С уважением, команда WAY!</string>
    <string name="creators">Создатели: Кулаков Дмитрий, Орлова Полина</string>
</resources>