<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailLogin"
    android:background="@color/background"
    >
    <TextView
        android:id="@+id/appnameloginwin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/app"
        android:textAlignment="center"
        android:textColor="@color/way"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textemaillogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regemailaccount"
        android:layout_marginBottom="5dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/appnameloginwin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/Emailemaillogin"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:hint="@string/email"
        android:textColorHint="@color/way"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textemaillogin" />
    <EditText
        android:id="@+id/Passwordemailsignin"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:hint="@string/password"
        android:textColorHint="@color/way"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emailemaillogin"
        />

    <Button
        android:id="@+id/buttonsignin"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/signin"
        app:layout_constraintTop_toBottomOf="@+id/Passwordemailsignin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/way"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textmailforgetpas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonsignin"
        app:layout_constraintTop_toBottomOf="@+id/buttonsignin"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/textmailloginback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/buttonsignin"
        app:layout_constraintTop_toBottomOf="@+id/buttonsignin"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        />
    <ProgressBar
        android:id="@+id/progressBarEmaillogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>