<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegesterWindow">

    <TextView
        android:id="@+id/appnameregwin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/app"
        android:textAlignment="center"
        android:textColor="@color/way"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Nameemailreg"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="35dp"
        android:inputType="text"
        android:textSize="24sp"
        android:hint="@string/fullname"
        android:textColorHint="@color/way"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textemailreg" />

    <EditText
        android:id="@+id/Emailemailreg"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:hint="@string/email"
        android:textColorHint="@color/way"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nameemailreg" />

    <EditText
        android:id="@+id/Passwordemailreg"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:hint="@string/password"
        android:textColorHint="@color/way"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emailemailreg"
        />

    <Button
        android:id="@+id/SignInemailreg"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/way"
        android:text="@string/regaccount"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Passwordemailreg" />

    <TextView
        android:id="@+id/textemailreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regemailaccount"
        android:layout_marginBottom="5dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/appnameregwin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />

    <TextView
        android:id="@+id/backtoregusersfromemailreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@+id/SignInemailreg"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="35dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        />

    <ProgressBar
        android:id="@+id/progressBarEmailreg"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>